finished updating names and namespaces and added tests for the repositoryies

--- a/Cybermancy.Persistence/Cybermancy.Persistence.csproj
+++ b/Cybermancy.Persistence/Cybermancy.Persistence.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cybermancy.Core\Cybermancy.Core.csproj" />
     <ProjectReference Include="..\Cybermancy.Domain\Cybermancy.Domain.csproj" />
-    <ProjectReference Include="..\Cybermancy.Application\Cybermancy.Core.csproj" />
   </ItemGroup>
 
 </Project>
