Database generation will still need to be checked. Mainly how it handles entry deletion and nullable fields

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,13 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+#Config File
+appsettings.json
+
+#Database File
+Cybermancy.db
+
+#JetBrainsConfig File
+Cybermancy.sln.DotSettings
+.idea/
