--- a/Cybermancy.Core/Cybermancy.Core.csproj
+++ b/Cybermancy.Core/Cybermancy.Core.csproj
@@ -1,11 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Cybermancy.Domain\Cybermancy.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Cybermancy.Domain\Cybermancy.Domain.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-00986"/>
+        <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0"/>
+    </ItemGroup>
 
 </Project>
