--- a/Cybermancy.Persistence/Cybermancy.Persistence.csproj
+++ b/Cybermancy.Persistence/Cybermancy.Persistence.csproj
@@ -6,15 +6,15 @@
 
     <ItemGroup>
         <Folder Include="Migrations" />
-        <Folder Include="Migrations\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
     </ItemGroup>
 
     <ItemGroup>
