--- a/Cybermancy/Cybermancy.csproj
+++ b/Cybermancy/Cybermancy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -6,13 +6,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Cybermancy.Core\Cybermancy.Core.csproj"/>
-        <ProjectReference Include="..\Cybermancy.Persistence\Cybermancy.Persistence.csproj"/>
+        <ProjectReference Include="..\Cybermancy.Core\Cybermancy.Core.csproj" />
+        <ProjectReference Include="..\Cybermancy.Persistence\Cybermancy.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     </ItemGroup>
+
 
     <ItemGroup>
         <None Update="appsettings.json">
