--- a/Cybermancy.Core/Cybermancy.Core.csproj
+++ b/Cybermancy.Core/Cybermancy.Core.csproj
@@ -9,10 +9,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-00986" />
-        <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.3" />
+        <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01002" />
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01002" />
+        <PackageReference Include="IDoEverything.DSharpPlus.SlashCommands" Version="2.0.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
         <PackageReference Include="Nefarius.DSharpPlus.Extensions.Hosting" Version="1.0.46-beta" />
+        <PackageReference Include="Nefarius.DSharpPlus.Interactivity.Extensions.Hosting" Version="1.0.46-beta" />
         <PackageReference Include="Nefarius.DSharpPlus.SlashCommands.Extensions.Hosting" Version="1.0.46-beta" />
     </ItemGroup>
 
