Member logging and module commands added. Switch to postgres will need a bit more testing since it seems to not like extension methods inside select statements

--- a/Cybermancy.Discord/Cybermancy.Discord.csproj
+++ b/Cybermancy.Discord/Cybermancy.Discord.csproj
@@ -8,20 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01099" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01099" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01099" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01112" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01112" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01112" />
     <PackageReference Include="MediatR" Version="10.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Nefarius.DSharpPlus.Extensions.Hosting" Version="2.0.94-beta" />
-    <PackageReference Include="Nefarius.DSharpPlus.Interactivity.Extensions.Hosting" Version="2.0.94-beta" />
-    <PackageReference Include="Nefarius.DSharpPlus.SlashCommands.Extensions.Hosting" Version="2.0.94-beta" />
+    <PackageReference Include="Nefarius.DSharpPlus.Extensions.Hosting" Version="2.0.99-beta" />
+    <PackageReference Include="Nefarius.DSharpPlus.Interactivity.Extensions.Hosting" Version="2.0.99-beta" />
+    <PackageReference Include="Nefarius.DSharpPlus.SlashCommands.Extensions.Hosting" Version="2.0.99-beta" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
