--- a/Cybermancy.Discord/appsettings.example.json
+++ b/Cybermancy.Discord/appsettings.example.json
@@ -1,7 +1,7 @@
 {
   "channelId": "000000000000000000",
   "ConnectionStrings": {
-    "CybermancyConnectionString": "Database connection string goes here."
+    "CybermancyConnectionString": "Postgres Database connection string goes here."
   },
   "guildId": "000000000000000000",
   "Logging": {
