Split message log and user log sections

--- a/Grimoire.Core/Grimoire.Core.csproj
+++ b/Grimoire.Core/Grimoire.Core.csproj
@@ -10,13 +10,17 @@
   <ItemGroup>
     <PackageReference Include="Mediator.Abstractions" Version="2.1.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Folder Include="Enums\" />
     <Folder Include="Migrations\" />
-  </ItemGroup>
+  </ItemGroup>-->
     
   <ItemGroup>
     <Using Include="Grimoire.Core.Contracts.Persistance" />
