--- a/.editorconfig
+++ b/.editorconfig
@@ -143,7 +143,7 @@ csharp_style_deconstructed_variable_declaration = true
 csharp_style_implicit_object_creation_when_type_is_apparent = true
 csharp_style_inlined_variable_declaration = true:warning
 csharp_style_pattern_local_over_anonymous_function = true:warning
-csharp_style_prefer_index_operator = true
+csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true
 csharp_style_throw_expression = false:warning
 csharp_style_unused_value_assignment_preference = discard_variable:silent
@@ -276,3 +276,6 @@ dotnet_naming_style.async_suffix.word_separator =
 dotnet_naming_style.async_suffix.capitalization = pascal_case
 csharp_style_namespace_declarations = block_scoped:silent
 csharp_style_prefer_null_check_over_type_check = true:suggestion
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = true:silent
+csharp_style_prefer_local_over_anonymous_function = true:suggestion
