--- a/Grimoire.Core.Test.Unit/Grimoire.Core.Test.Unit.csproj
+++ b/Grimoire.Core.Test.Unit/Grimoire.Core.Test.Unit.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Grimoire.Core\Grimoire.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.example.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
