finished all features and leveling log is tested

--- a/Grimoire.Discord/appsettings.example.json
+++ b/Grimoire.Discord/appsettings.example.json
@@ -1,15 +1,26 @@
 {
-  "channelId": "000000000000000000",
-  "ConnectionStrings": {
-    "GrimoireConnectionString": "Postgres Database connection string goes here."
-  },
-  "guildId": "000000000000000000",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "token": "Bot Token Goes Here"
+    "channelId": "000000000000000000",
+    "ConnectionStrings": {
+        "GrimoireConnectionString": "Postgres Database connection string goes here."
+    },
+    "guildId": "000000000000000000",
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Warning",
+                "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+            }
+        },
+        "WriteTo": [
+            { "Name": "Console" }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Properties": {
+            "Application": "Grimoire",
+            "Environment": "Test"
+        }
+    },
+    "token": "Bot Token Goes Here"
 }
