more bug fixes and standarized how I was handling images in embeds

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -1,9 +1,10 @@
 {
     "channelId": "",
+    "guildId": "",
+    "validImageExtensions": ".jpg,.jpeg,.png,.webp,.gif",
     "ConnectionStrings": {
         "Grimoire": ""
     },
-    "guildId": "",
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
