Migration script completed and debugging completed. Will do another round of testing just to make sure but should be extremely close to done

--- a/Grimoire.MigrationTool/appsettings.json
+++ b/Grimoire.MigrationTool/appsettings.json
@@ -6,8 +6,9 @@
         "MinimumLevel": {
             "Default": "Information",
             "Override": {
-                "Microsoft": "Warning",
-                "Microsoft.Hosting.Lifetime": "Warning"
+                "Microsoft": "Information",
+                "Microsoft.Hosting.Lifetime": "Warning",
+                "Microsoft.EntityFrameworkCore.Database.Command": "Information"
             }
         },
         "WriteTo": [
