Added logic to build connection string from properties is one isn't set

--- a/Grimoire.Core/Grimoire.Core.csproj
+++ b/Grimoire.Core/Grimoire.Core.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mediator.Abstractions" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
