--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -5,6 +5,13 @@
     "ConnectionStrings": {
         "Grimoire": ""
     },
+    "ConnectionProperties": {
+        "Hostname": "",
+        "Port": "",
+        "DbName": "",
+        "Username": "",
+        "Password": ""
+    },
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
