--- a/Grimoire.MigrationTool/appsettings.json
+++ b/Grimoire.MigrationTool/appsettings.json
@@ -2,6 +2,13 @@
     "ConnectionStrings": {
         "Grimoire": ""
     },
+    "ConnectionProperties": {
+        "Hostname": "",
+        "Port": "",
+        "DbName": "",
+        "Username": "",
+        "Password": ""
+    },
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
