Fixed issue where an error was being thrown by the delete log when a 'user joined the server' system message was sent. I also fixed the issue where an error would be thrown when grimoire did not have permissions to see guild invites. I also implemented the fixed version of the 'deleted by' field for the delete log. Finally a few format changes for logs.

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -18,7 +18,8 @@
             "Override": {
                 "Microsoft": "Warning",
                 "Microsoft.Hosting.Lifetime": "Warning",
-                "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+                "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+                "System.Net.Http.HttpClient":  "Warning"
             }
         },
         "WriteTo": [
