--- a/Grimoire.Discord/Grimoire.Discord.csproj
+++ b/Grimoire.Discord/Grimoire.Discord.csproj
@@ -10,21 +10,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mediator.SourceGenerator" Version="2.1.3">
+    <PackageReference Include="Mediator.SourceGenerator" Version="2.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.7" />
-    <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.304" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.8" />
+    <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.305" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Nefarius.DSharpPlus.CommandsNext.Extensions.Hosting" Version="4.4.693" />
     <PackageReference Include="Nefarius.DSharpPlus.Interactivity.Extensions.Hosting" Version="4.4.693" />
     <PackageReference Include="Nefarius.DSharpPlus.SlashCommands.Extensions.Hosting" Version="4.4.693" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
