--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -17,7 +17,7 @@
             "Default": "Information",
             "Override": {
                 "Microsoft": "Warning",
-                "Microsoft.Hosting.Lifetime": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information",
                 "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
                 "System.Net.Http.HttpClient":  "Warning"
             }
