Added retries for 502 gateway errors on the audit log since that was the most common place it appeared and added error handling to the image embed service to fix issue #9. Also tried to handle null errors better with the nickname, username, and avatar update commands.

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -17,7 +17,7 @@
             "Default": "Information",
             "Override": {
                 "Microsoft": "Warning",
-                "Microsoft.Hosting.Lifetime": "Information",
+                "Microsoft.Hosting.Lifetime": "Warning",
                 "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
                 "System.Net.Http.HttpClient":  "Warning"
             }
