Init integration with pluralkit

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -31,5 +31,8 @@
             "Environment": "Test"
         }
     },
-    "token": ""
+    "token": "",
+    "pluralkitToken": "",
+    "pluralkitUserAgent": "",
+    "pluralkitApiEndpoint": "https://api.pluralkit.me/v2/"
 }
