intial db changes and reward message system

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -3,7 +3,7 @@
     "guildId": "",
     "validImageExtensions": ".jpg,.jpeg,.png,.webp,.gif",
     "ConnectionStrings": {
-        "Grimoire": ""
+        "Grimoire": "Host=Localhost; Port=5433; Database=Grimoire; Username=Grimoire; Password=ww@NknY6VG3fc4; Include Error Detail=true"
     },
     "ConnectionProperties": {
         "Hostname": "",
