--- a/.editorconfig
+++ b/.editorconfig
@@ -49,6 +49,13 @@ dotnet_style_qualification_for_field = true:silent
 dotnet_style_qualification_for_property = true:error
 dotnet_style_qualification_for_method = true:error
 dotnet_style_qualification_for_event = true:error
+dotnet_diagnostic.CA1846.severity = warning
+dotnet_diagnostic.CA1833.severity = warning
+dotnet_diagnostic.CA1832.severity = warning
+dotnet_diagnostic.CA1838.severity = suggestion
+dotnet_diagnostic.CA1848.severity = suggestion
+dotnet_diagnostic.CA1852.severity = suggestion
+dotnet_diagnostic.CA1863.severity = suggestion
 
 # Project files
 [*.{csproj,targets,yml}]
@@ -307,3 +314,5 @@ csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimenta
 csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true:silent
 csharp_style_prefer_extended_property_pattern = true:suggestion
 csharp_style_prefer_primary_constructors = true:suggestion
+dotnet_diagnostic.CA1845.severity = warning
+dotnet_diagnostic.CA1805.severity = suggestion
