--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -19,7 +19,7 @@
                 "Microsoft": "Warning",
                 "Microsoft.Hosting.Lifetime": "Warning",
                 "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-                "System.Net.Http.HttpClient":  "Warning"
+                "System.Net.Http.HttpClient":  "Debug"
             }
         },
         "WriteTo": [
