upgrade packages and cleanup logs

--- a/Grimoire.Discord/appsettings.json
+++ b/Grimoire.Discord/appsettings.json
@@ -19,17 +19,19 @@
                 "Microsoft": "Warning",
                 "Microsoft.Hosting.Lifetime": "Warning",
                 "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-                "System.Net.Http.HttpClient":  "Debug"
+                "System.Net.Http": "Warning",
+                "Polly": "Warning"
             }
         },
         "WriteTo": [
-            { "Name": "Console" }
+            {
+                "Name": "Console",
+                "Args": {
+                    "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+                }
+            }
         ],
-        "Enrich": [ "WithMachineName", "WithThreadId", "WithExceptionDetails" ],
-        "Properties": {
-            "Application": "Grimoire",
-            "Environment": "Test"
-        }
+        "Enrich": [ "WithExceptionDetails" ]
     },
     "token": "",
     "pluralkitToken": "",
