even moar tests

--- a/Grimoire.Test.Unit/Grimoire.Test.Unit.csproj
+++ b/Grimoire.Test.Unit/Grimoire.Test.Unit.csproj
@@ -37,4 +37,8 @@
     <ProjectReference Include="..\Grimoire\Grimoire.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Logging\" />
+  </ItemGroup>
+
 </Project>
