Finished converting to DSP 5. Now to convert to new command framework

--- a/Grimoire/Grimoire.csproj
+++ b/Grimoire/Grimoire.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Shared\SharedModule\" />
     <Folder Include="Migrations\"/>
   </ItemGroup>
 
